// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Em checkGrammar=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkGrammar=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkHighlight=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkHighlight=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkSpaces=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em checkSpaces=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em className="my-classname" 1`] = `
<em
  className="uu5-bricks-em my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em content="This is Content from ContentMixin" 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</em>
`;

exports[`UU5.Bricks.Em content=12345 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</em>
`;

exports[`UU5.Bricks.Em controlled=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em controlled=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em default props 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em disabled=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em disabled=true 1`] = `
<em
  className="uu5-bricks-em uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</em>
`;

exports[`UU5.Bricks.Em docKit examples UU5.Bricks.Em should render without crash 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="emphasised"
  />
</em>
`;

exports[`UU5.Bricks.Em dynamic=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em dynamic=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em hidden=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em hidden=true 1`] = `
<em
  className="uu5-bricks-em uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em id="myId" 1`] = `
<em
  className="uu5-bricks-em"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em ignoreHTML=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em ignoreHTML=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em mainAttrs=undefined 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em name="myName" 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em noIndex=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em noIndex=true 1`] = `
<em
  className="uu5-bricks-em uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em selected=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em selected=true 1`] = `
<em
  className="uu5-bricks-em uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em style="padding:8px; borderRadius: 2px" 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Em style={"backgroundColor":"red","color":"blue"} 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Em textCorrector=false 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em textCorrector=true 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Em tooltip="My Tooltip" 1`] = `
<em
  className="uu5-bricks-em"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
